[package]
name = "personal_website"
version = "0.1.0"
authors = ["Bryan Mytko <bryanmytko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rand = "0.8.5"
regex = "1"
urlencoding = "2.1.2"
